# OSD-Lite-Regressions

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  build_and_run.sh
bfr_evaluate/: CMakeLists.txt  bfrSurfaceEvaluator.cpp  bfrSurfaceEvaluator.h  farPatchEvaluator.cpp  farPatchEvaluator.h  init_shapes.h  init_shapes_all.h  main.cpp  types.h
common/: CMakeLists.txt  box.h  cmp_utils.h  hbr_utils.h  mesh_loader.h  shape_utils.cpp  shape_utils.h  stopwatch.h  tess.h  tess_spaced.cpp  tess_uniform.cpp
far_perf/: CMakeLists.txt  far_perf.cpp  init_shapes.h
far_regression/: CMakeLists.txt  example_createMesh.py  far_regression.cpp  init_shapes.h
hbr/: CMakeLists.txt  bilinear.h  catmark.h  cornerEdit.h  creaseEdit.h  halfedge.h  loop.h  mesh.h  subdivision.h  vertex.h
hbr_regression/: CMakeLists.txt  baseline.cpp  init_shapes.h  main.cpp
shapes/: all.h  bilinear_cube.h  bilinear_nonplanar.h  bilinear_nonquads0.h  bilinear_nonquads1.h
tmr_regression/: CMakeLists.txt  farEvaluator.cpp  farEvaluator.h  init_shapes.cpp  init_shapes.h  mayaLogger.cpp  mayaLogger.h  options.cpp  options.h  regression.cpp  regressionTask.cpp  regressionTask.h  tmrEvaluator.cpp  tmrEvaluator.h  types.h
